 * [yi-keymap-vim] Support all abbreviations for :nohlsearch
 * [yi-keymap-vim] . in relative ex ranges is optional
 * [yi-keymap-vim] Range support for :delete
 * [yi-keymap-vim] Support 'sub' abbreviation for substitute.
 * [yi-keymap-vim] Fix behaviour of f,t,F,T when given a count
 * [yi-keymap-vim] Implement visual paste
 * [yi-keymap-vim] Add supporting of pasting text on Ex
 * Fix error when completing the empty text
 * Fixed hint spawning multiple interpreters
 * Fix the Windows build
 * Various performance improvements

0.13.5
------

 * Unbreak build with alex-3.2.1
 * [yi-keymap-cua] Expose default Cua config
 * Fix haddock generation for BufferImpl

0.13.4
------

 * alex >= 3.2.1 is now allowed as it was fixed
 * [yi-keymap-vim] Implement <C-d> and <M-d> in Ex mode
 * [yi-keymap-vim] Implement :registers command
 * [yi-keymap-emacs] Fix paragraph selection
 * Fix build with GHC 8.0.2

0.13.3
------

 * Blacklist alex >= 3.2.0

0.13.2
------

 * Update optparse-applicative version

0.13.1
------

 * pre-0.13 example user configs are now ported to 0.13

0.13.0
------

 * Keymaps, modes and frontends are split into separate packages.
   User configs are now supposed to be packages as well.
 * Building with GHC 7.8 is no longer supported
 * Added :read Ex command
 * /<Esc> no longer resets incremental search in vim keymap

0.12.6
------

 * Building with GHC 8.0 is now supported
 * Vertical split with vty frontend
 * System clipboard support in emacs and cua keymaps

0.12.5
------

 * Remove trying to Show a function

0.12.4
------

 * Fix build with hint-0.5.1
 * Replace liftM with fmap

0.12.3
------

 * Update gtk-related dependencies
 * Make sticky eol local to buffer

0.12.2
------

 * Update QuickCheck and vty dependencies

0.12.1
------

 * Add an upper bound on vty dependency to avoid build breakage with vty>=5.4 (#776)
 * Fix build with ghc 7.10 and "-fhint" flag
 * Fix build with -f-vty
 * Fix visual block append

0.12.0
------
